# valid_framework

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/common/: StdSetWrapper.hpp  UnknownContainer.hpp  UnknownContainerWrapper.hpp
examples/validate/: CMakeLists.txt  validate_example.cpp
include/: ContainerWrapper.hpp  KeyGenerator.hpp  Logger.hpp  OperationApplier.hpp  OperationGenerator.hpp  Operations.hpp  Runner.hpp  Scenario.hpp  Trace.hpp  valid_framework.hpp
include/valid_framework/: KeyGenerator.hpp  Logger.hpp  OperationGenerator.hpp  Operations.hpp  Runner.hpp  Scenario.hpp  Trace.hpp
tests/: CMakeLists.txt  concept_check.cpp  include_check.cpp
tools/: compare_logs.py  plot_log.py
utils/: plot_json_averages.py  plot_logs.py  script.py
